--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <button class='btn btn-success'>全て完了/未了</button>
         </div>
         <div class='btn-group'>
-          <button ng-click='changeFilter()' ng-class='{ active: !currentFilter }' class='btn btn-default active'>全部 <span class='badge'>{{ todos.length }}</span></button>
-          <button ng-click='changeFilter(filter.remaining)' ng-class='{ active: currentFilter == filter.remaining }' class='btn btn-default'>未了 <span class='badge'>2</span></button>
-          <button ng-click='changeFilter(filter.done)' ng-class='{ active: currentFilter == filter.done }' class='btn btn-default'>完了 <span class='badge'>1</span></button>
+          <button ng-click='changeFilter()' ng-class='{ active: !currentFilter }' class='btn btn-default active'>全部 <span class='badge'>{{ allCount }}</span></button>
+          <button ng-click='changeFilter(filter.remaining)' ng-class='{ active: currentFilter == filter.remaining }' class='btn btn-default'>未了 <span class='badge'>{{ remainingCount }}</span></button>
+          <button ng-click='changeFilter(filter.done)' ng-class='{ active: currentFilter == filter.done }' class='btn btn-default'>完了 <span class='badge'>{{ doneCount }}</span></button>
         </div>
         <div class='btn-group'>
           <button class='btn btn-danger'>完了アイテムを全て削除</button>
