edit function done

--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
       <hr>
 
       <ul class='list-unstyled'>
-        <li class='todo-item' ng-repeat='todo in todos | filter:currentFilter' ng-class='{ done: todo.done }'>
-          <form class='input-group input-group-lg'>
+        <li class='todo-item' ng-repeat='todo in todos | filter:currentFilter' ng-class='{ done: todo.done, editing: todo == editing }'>
+          <form class='input-group input-group-lg' name='todoForm' ng-submit='doneEdit(todoForm)'>
             <label class='input-group-addon'>
               <input type='checkbox' ng-model='todo.done'>
             </label>
-            <p class='form-control input-lg todo-title'>{{ todo.title }}</p>
-            <span class='input-group-btn del-btn'>
+            <p ng-hide='todo == editing' ng-dblclick='editTodo(todo)' class='form-control input-lg todo-title'>{{ todo.title }}</p>
+            <input type='text' required class='form-control input-lg' ng-model='todo.title' ng-show='todo == editing' ng-select='todo == editing' ng-blur='doneEdit(todoForm)'>
+            <span class='input-group-btn del-btn' ng-if='todo != editing'>
               <button type='reset' class='btn btn-danger'>削除</button>
             </span>
           </form>
