--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
       <hr>
 
-      <div class='btn-toolbat'>
+      <div class='btn-toolbar'>
         <div class='btn-group'>
-          <button class='btn btn-success'>全て完了/未了</button>
+          <button class='btn btn-success' ng-click='checkAll()'>全て完了/未了</button>
         </div>
         <div class='btn-group'>
           <button ng-click='changeFilter()' ng-class='{ active: !currentFilter }' class='btn btn-default active'>全部 <span class='badge'>{{ allCount }}</span></button>
@@ -34,7 +34,7 @@
           <button ng-click='changeFilter(filter.done)' ng-class='{ active: currentFilter == filter.done }' class='btn btn-default'>完了 <span class='badge'>{{ doneCount }}</span></button>
         </div>
         <div class='btn-group'>
-          <button class='btn btn-danger'>完了アイテムを全て削除</button>
+          <button ng-click='removeDoneTodo()' class='btn btn-danger'>完了アイテムを全て削除</button>
         </div>
       </div>
 
@@ -49,7 +49,7 @@
             <p ng-hide='todo == editing' ng-dblclick='editTodo(todo)' class='form-control input-lg todo-title'>{{ todo.title }}</p>
             <input type='text' required class='form-control input-lg' ng-model='todo.title' ng-show='todo == editing' ng-select='todo == editing' ng-blur='doneEdit(todoForm)'>
             <span class='input-group-btn del-btn' ng-if='todo != editing'>
-              <button type='reset' class='btn btn-danger'>削除</button>
+              <button ng-click='removeTodo(todo)' type='reset' class='btn btn-danger'>削除</button>
             </span>
           </form>
         </li>
